# jpmc_data

./: .gitignore  README.md  main.py  pyproject.toml
task1/: README.md  task1.ipynb  task1.py
task2/: README.md  task2.ipynb  task2.py
task3/: README.md  task3.ipynb  task3.py
task4/: README.md  task4.ipynb
